Fyrsta commit með adal view

--- a/src/main/resources/hopverkefni/vidmot/hello-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/hello-view.fxml
@@ -5,12 +5,29 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="hopverkefni.vidmot.HelloController">
-  <padding>
-    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-  </padding>
+<?xml version="1.0" encoding="UTF-8"?>
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
+
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.ListView?>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="469.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hopverkefni.vidmot.PacmanController">
+    <HBox>
+        <Label fx:id="fxtimi" alignment="CENTER_RIGHT" prefHeight="80" prefWidth="160" text="Tími:" />
+        <Label fx:id="timi" alignment="CENTER" graphicTextGap="0.0" prefHeight="80" prefWidth="40" text="00.00" />
+    </HBox>
+    <HBox>
+        <children>
+            <SnakurBord fx:id="snakeBord" prefHeight="400.0" prefWidth="365.0" />
+            <ListView fx:id="fxStigin" prefHeight="200.0" prefWidth="200.0" />
+        </children>
+    </HBox>
+    <HBox>
+        <Label fx:id="fxStigi" alignment="BASELINE_CENTER" prefHeight="80" prefWidth="30" text="Stig:" />
+        <Label fx:id="fxStig" alignment="CENTER_LEFT" graphicTextGap="0.0" prefHeight="80" prefWidth="40" text="0">
+            <padding>
+                <Insets right="200.0" />
+            </padding></Label>
+        <Label fx:id="fxlives" alignment="CENTER" prefHeight="80" prefWidth="30" text="Líf" />
+    </HBox>
+
 </VBox>
