--- a/src/main/resources/hopverkefni/vidmot/adal-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/adal-view.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import hopverkefni.vidmot.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.ListView?>
-<?import hopverkefni.vidmot.PacmanBord?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="469.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hopverkefni.vidmot.PacmanController">
     <HBox>
         <Label fx:id="fxtimi" alignment="CENTER_RIGHT" prefHeight="80" prefWidth="160" text="Tími:" />
@@ -16,7 +12,7 @@
     </HBox>
     <HBox>
         <children>
-            <PacmanBord fx:id="snakeBord" prefHeight="400.0" prefWidth="365.0" />
+            <PacmanBord fx:id="fxPacmanBord"  prefHeight="400.0" prefWidth="365.0"/>
             <ListView fx:id="fxStigin" prefHeight="200.0" prefWidth="200.0" />
         </children>
     </HBox>
