--- a/src/main/resources/hopverkefni/vidmot/menu-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/menu-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.text.*?>
 
 <VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hopverkefni.vidmot.PacmanController">
-    <Label fx:id="nafn" alignment="CENTER" prefWidth="600" text="PACMAN" textAlignment="CENTER" textFill="#ddd718" stylesheets="@Border.css">
+    <Label fx:id="nafn" alignment="CENTER" prefWidth="600" text="PACMAN" textAlignment="CENTER" textFill="#ddd718" stylesheets="@border.css">
          <font>
             <Font size="96.0" />
          </font>
