--- a/src/main/resources/hopverkefni/vidmot/pacman-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/pacman-view.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.geometry.Rectangle2D?>
 <fx:root fitHeight="30.0" fitWidth="28.0" type="javafx.scene.image.ImageView" xmlns=" http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
-    <Image preserveRatio="true" requestedHeight="30" url="@Pacman.png"/>
+    <Image preserveRatio="true" requestedHeight="30" url="@pacman.png"/>
     <viewport>
         <Rectangle2D/>
     </viewport>
