Byrjað að búa til mat og aðlaga stigakerfið að honum

--- a/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
@@ -10,6 +10,7 @@
 <?import hopverkefni.vidmot.Draugur?>
 <?import hopverkefni.vidmot.Veggtegund1?>
 <?import hopverkefni.vidmot.Veggtegund2?>
+<?import hopverkefni.vidmot.Matur?>
 <fx:root type="javafx.scene.layout.Pane" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
     <Pacman fx:id="fxPacman" x="300" y="300"/>
     <Draugur fx:id="fxDraugur" x="340" y="300"/>
@@ -49,4 +50,6 @@
     <Veggtegund1 x="41" y="40"/>
     <Veggtegund2 x="41" y="40"/>
     <Veggtegund2 x="41" y="60"/>
+
+    <Matur x="300" y="200"/>
 </fx:root>
