--- a/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
@@ -11,6 +11,7 @@
 <?import hopverkefni.vidmot.Veggtegund1?>
 <?import hopverkefni.vidmot.Veggtegund2?>
 <?import hopverkefni.vidmot.Matur?>
+<?import hopverkefni.vidmot.FeiturMatur?>
 <fx:root type="javafx.scene.layout.Pane" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
     <Pacman fx:id="fxPacman" x="300" y="300"/>
     <Draugur fx:id="fxDraugur" x="340" y="300"/>
@@ -50,7 +51,7 @@
     <Veggtegund1 x="41" y="40"/>
     <Veggtegund2 x="41" y="40"/>
     <Veggtegund2 x="41" y="60"/>
+    <!-- Prufa fyrir mat -->
 
-    <Matur x="300" y="200"/>
 
 </fx:root>
