Leikmaður missir líif ef hannn rekst á draug

--- a/src/main/resources/hopverkefni/vidmot/adal-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/adal-view.fxml
@@ -55,6 +55,13 @@
         <font>
             <Font size="20.0" />
         </font></Label>
+        <Label fx:id="fxLif" alignment="CENTER_LEFT" graphicTextGap="0.0" prefHeight="80" prefWidth="300" text="0">
+            <font>
+                <Font size="20.0" />
+            </font>
+            <padding>
+                <Insets right="200.0" />
+            </padding></Label>
     </HBox>
 
 </VBox>
