Leikmaður missir líif ef hannn rekst á draug

--- a/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
@@ -52,6 +52,8 @@
     <Veggtegund2 x="41" y="40"/>
     <Veggtegund2 x="41" y="60"/>
     <!-- Prufa fyrir mat -->
+    <Matur x="40" y="200"/>
+    <FeiturMatur x="40" y="200"/>
 
 
 </fx:root>
