matur kominn inn á borð

--- a/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
@@ -43,6 +43,8 @@
     <Veggtegund2 x="41" y="40"/>
     <Veggtegund2 x="41" y="60"/>
     <!-- Prufa fyrir mat -->
+    <Matur y="50" x="200"/>
+    <FeiturMatur y="100" x="300"/>
 
 
 
