--- a/src/main/resources/hopverkefni/vidmot/menu-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/menu-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hopverkefni.vidmot.PacmanController">
+<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hopverkefni.vidmot.MenuController">
     <Label fx:id="nafn" alignment="CENTER" prefWidth="600" text="PACMAN" textAlignment="CENTER" textFill="#ddd718" stylesheets="@border.css">
          <font>
             <Font size="96.0" />
@@ -13,7 +13,7 @@
          <VBox.margin>
             <Insets top="50.0" />
          </VBox.margin></Label>
-    <Button fx:id="fxstart" alignment="CENTER" prefHeight="50" prefWidth="100" text="PLAY">
+    <Button fx:id="fxstart" onAction="#fxleikur" alignment="CENTER" prefHeight="50" prefWidth="100" text="PLAY">
          <VBox.margin>
             <Insets left="250.0" top="20.0" />
          </VBox.margin></Button>
