--- a/src/main/resources/hopverkefni/vidmot/adal-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/adal-view.fxml
@@ -22,6 +22,7 @@
             <font>
                 <Font size="20.0" />
             </font></Label>
+        <Button fx:id="fxstart" onAction="#fxbyrja" alignment="CENTER" prefHeight="20" prefWidth="50" text="PLAY"/>
         <Label fx:id="Stigatafla" alignment="CENTER" graphicTextGap="0.0" prefHeight="80" prefWidth="100" text="Stigataflan">
             <font>
                 <Font size="20.0" />
