--- a/src/main/resources/hopverkefni/vidmot/menu-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/menu-view.fxml
@@ -5,8 +5,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hopverkefni.vidmot.MenuController">
-    <Label fx:id="nafn" alignment="CENTER" prefWidth="600" text="PACMAN" textAlignment="CENTER" textFill="#ddd718" stylesheets="@border.css">
+<VBox prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="hopverkefni.vidmot.MenuController">
+    <Label fx:id="nafn" alignment="CENTER" prefWidth="600" text="PACMAN" textAlignment="CENTER" textFill="#ddd718" >
          <font>
             <Font size="96.0" />
          </font>
