--- a/src/main/resources/hopverkefni/vidmot/leikbord-dummy.fxml
+++ b/src/main/resources/hopverkefni/vidmot/leikbord-dummy.fxml
@@ -7,5 +7,5 @@
 <?import javafx.scene.layout.*?>
 
 <fx:root type="javafx.scene.layout.Pane" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
-    <fx:include source="Matur.fxml"/>
+    <fx:include source="AllurMatur.fxml"/>
 </fx:root>
