--- a/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
@@ -55,8 +55,9 @@
     <Veggtegund2 x="55" y="310"/>
     <Veggtegund1 x="250" y="55"/>
     <Veggtegund1 x="250" y="400"/>
-    <Veggtegund2 x="250" y="175"/>
+    <Veggtegund2 x="240" y="175"/>
     <Veggtegund2 x="350" y="175"/>
     <Pacman fx:id="fxPacman" x="300" y="400"/>
+    <Kyssuber fx:id="fxKyssuber" x="270" y="250"/>
 
 </fx:root>
