--- a/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
@@ -4,6 +4,12 @@
 <?import hopverkefni.vidmot.*?>
 
 <fx:root type="javafx.scene.layout.Pane" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+    <Draugur fx:id="fxDraugur" x="250" y="300"/>
+    <fx:include source="AllurMatur.fxml" fx:id="fxAllurmatur" />
+    <FeiturMatur y="100" x="500"/>
+    <FeiturMatur y="100" x="100"/>
+    <FeiturMatur y="350" x="500"/>
+    <FeiturMatur y="350" x="100"/>
     <!-- Þak -->
     <Veggtegund1 x="1" y="1"/>
     <Veggtegund1 x="100" y="1"/>
@@ -51,13 +57,7 @@
     <Veggtegund1 x="250" y="400"/>
     <Veggtegund2 x="240" y="175"/>
     <Veggtegund2 x="350" y="175"/>
-    <fx:include source="AllurMatur.fxml" fx:id="fxAllurmatur" />
-    <FeiturMatur y="100" x="500"/>
-    <FeiturMatur y="100" x="100"/>
-    <FeiturMatur y="350" x="500"/>
-    <FeiturMatur y="350" x="100"/>
+    <Pacman fx:id="fxPacman" x="424" y="285"/>
     <Kyssuber fx:id="fxKyssuber" x="270" y="250"/>
-    <Draugur fx:id="fxDraugur" x="250" y="300"/>
-    <Pacman fx:id="fxPacman" x="300" y="400"/> <!-- lína 45 -->
 
 </fx:root>
