--- a/src/main/resources/hopverkefni/vidmot/AllurMatur.fxml
+++ b/src/main/resources/hopverkefni/vidmot/AllurMatur.fxml
@@ -41,4 +41,48 @@
     <Matur y="425" x="508"/>
     <Matur y="425" x="542"/>
     <Matur y="425" x="32"/>
+    <Matur y="100" x="134"/>
+    <Matur y="100" x="168"/>
+    <Matur y="100" x="202"/>
+    <Matur y="100" x="236"/>
+    <Matur y="100" x="270"/>
+    <Matur y="100" x="304"/>
+    <Matur y="100" x="338"/>
+    <Matur y="100" x="372"/>
+    <Matur y="100" x="406"/>
+    <Matur y="100" x="440"/>
+    <Matur y="100" x="474"/>
+    <Matur y="350" x="134"/>
+    <Matur y="350" x="168"/>
+    <Matur y="350" x="202"/>
+    <Matur y="350" x="236"/>
+    <Matur y="350" x="270"/>
+    <Matur y="350" x="304"/>
+    <Matur y="350" x="338"/>
+    <Matur y="350" x="372"/>
+    <Matur y="350" x="406"/>
+    <Matur y="350" x="440"/>
+    <Matur y="350" x="474"/>
+    <Matur y="300" x="134"/>
+    <Matur y="300" x="168"/>
+    <Matur y="300" x="202"/>
+    <Matur y="300" x="236"/>
+    <Matur y="300" x="270"/>
+    <Matur y="300" x="304"/>
+    <Matur y="300" x="338"/>
+    <Matur y="300" x="372"/>
+    <Matur y="300" x="406"/>
+    <Matur y="300" x="440"/>
+    <Matur y="300" x="474"/>
+    <Matur y="150" x="134"/>
+    <Matur y="150" x="168"/>
+    <Matur y="150" x="202"/>
+    <Matur y="150" x="236"/>
+    <Matur y="150" x="270"/>
+    <Matur y="150" x="304"/>
+    <Matur y="150" x="338"/>
+    <Matur y="150" x="372"/>
+    <Matur y="150" x="406"/>
+    <Matur y="150" x="440"/>
+    <Matur y="150" x="474"/>
 </Allurmatur>
