--- a/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
@@ -58,6 +58,7 @@
     <Veggtegund1 x="250" y="400"/>
     <Veggtegund2 x="240" y="175"/>
     <Veggtegund2 x="350" y="175"/>
-
+    <Veggtegund2 x="1" y="1"/>
+    <Veggtegund2 x="1" y="1"/>
     <Pacman fx:id="fxPacman" x="285" y="424"/>
 </fx:root>
