Lýsti föllum. Hreinsaði ónotaða hluti.

--- a/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
+++ b/src/main/resources/hopverkefni/vidmot/leikbord-view.fxml
@@ -45,15 +45,26 @@
     <Veggtegund2 x="590" y="255"/>
     <Veggtegund2 x="590" y="355"/>
 
-    <!-- Veggir í miðju -->
-    <Veggtegund1 x="55" y="55"/>
+    <!-- Kassi vinstri uppi -->
+    <Veggtegund1 x="65" y="55"/>
     <Veggtegund2 x="55" y="55"/>
-    <Veggtegund1 x="435" y="55"/>
+    <Veggtegund1 x="55" y="155"/>
+    <Veggtegund2 x="155" y="65"/>
+
+    <!-- Kassi hægri uppi -->
+    <Veggtegund1 x="425" y="55"/>
     <Veggtegund2 x="535" y="55"/>
+    <Veggtegund1 x="535" y="155"/>
+    <Veggtegund2 x="535" y="55"/>
+
+
     <Veggtegund1 x="435" y="400"/>
     <Veggtegund2 x="535" y="310"/>
+
     <Veggtegund1 x="55" y="400"/>
     <Veggtegund2 x="55" y="310"/>
+
+
     <Veggtegund1 x="250" y="55"/>
     <Veggtegund1 x="250" y="400"/>
     <Veggtegund2 x="240" y="175"/>
